Added Vault service
